--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    meu nome é rafael e estudo no colégio gori tenho 15 anos
+    meu nome é rafael e estudo no colégio gori tenho 15 anos, tenho 1,67 de altura, tenho cabelo liso a cor do meu cabelo é castanho claro, tenho olhos castanho e uso óculos.
 </body>
 </html>
