--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Autobiografia</h1>
-    meu nome é rafael e estudo no colégio gori tenho 15 anos, tenho 1,67 de altura, tenho cabelo liso a cor do meu cabelo é castanho claro, tenho olhos castanho e uso óculos
+    meu nome é rafael e estudo no colégio gori tenho 15 anos, tenho 1,67 de altura,
+    tenho cabelo liso a cor do meu cabelo é castanho claro, tenho olhos castanho e uso óculos, moro em managuari no paraná, nasci no hospital cristo rei no dia 17 e junho e 2008 a 07:21 numa terça-feira
+    - tag <br>
 </body>
 </html>
