--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Autobiografia</h1>
-    meu nome é rafael e estudo no colégio gori tenho 15 anos, tenho 1,67 de altura,
-    tenho cabelo liso a cor do meu cabelo é castanho claro, tenho olhos castanho e uso óculos, moro em managuari no paraná, nasci no hospital cristo rei no dia 17 e junho e 2008 a 07:21 numa terça-feira
-    - tag <br>
+    Cristiano Ronaldo dos Santos Aveiro é um futebolista português que atua como ponta-esquerda ou centroavante.
+    34 troféus ao longo de sua carreira, além de prêmios individuais, Atualmentejoga pelo Al-Nassr e seleção Portuguesa de futebol, 
+    nascido no dia 5 de fevereiro de 1985, com seus 38 anos de idade ele tem 859 gols em sua carreira e 1188 jogos oficiais, 5 champions league, 
+    5 bolas de ouro (essas informações são no dia 27 de outubro de 2023).
+    - tag <br> 
 </body>
 </html>
