--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Autobiografia</h1>
+<body> 
+    <h1>Cristiano Ronaldo</h1>
     Cristiano Ronaldo dos Santos Aveiro é um futebolista português que atua como ponta-esquerda ou centroavante.
     34 troféus ao longo de sua carreira, além de prêmios individuais, Atualmentejoga pelo Al-Nassr e seleção Portuguesa de futebol, 
     nascido no dia 5 de fevereiro de 1985, com seus 38 anos de idade ele tem 859 gols em sua carreira e 1188 jogos oficiais, 5 champions league, 
     5 bolas de ouro (essas informações são no dia 27 de outubro de 2023).
-    - tag <br> 
+    
 </body>
 </html>
